--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -19,14 +19,14 @@ brands:
 #  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: kaya_fx
-#  config_file: kaya_fx.yml
+- name: kaya_fx
+  config_file: kaya_fx.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
 
 
 
