--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,17 +4,25 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
-    - test_check_email_sign_up
+#    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
-#  class: AddNewLiveAccountTestCA
-#  tests:
-#    - test_add_new_live_account_ca
-#    - test_add_new_demo_account_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
+  class: AddNewLiveAccountTestCA
+  tests:
+    - test_add_new_live_account_ca
+    - test_add_new_demo_account_ca
 #    - test_check_demo_in_crm
 #    - test_open_ticket_ca
-#    - test_upload_document
+##    - test_upload_document
+- module: src.test.python.ui.automation.implementation.ca.Trading_Process
+  class: TradingProcess
+  tests:
+    - test_trade_with_insufficient_funds
+#    - test_open_order_buy_sell
+#    - test_open_order_stop_loss_take_profit
+#    - test_edit_order_stop_loss_take_profit
+#    - test_close_order
 
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
