--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,12 +1,12 @@
 tests_config:
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+#  class: MyDashboardActionsTest
+#  tests:
 #    - test_edit_event_my_dashboard
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_sorting_columns
-    - test_searching_by_columns
+#    - test_searching_by_columns
 #  ##General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
@@ -158,14 +158,14 @@ tests_config:
 #  class: AutoAssignModuleTest
 #  tests:
 #    - test_perform_delete_rule
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-#  class: CheckModulesTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModulesTest
+  tests:
 #    - test_my_dashboard_loading
 #    - test_audit_logs_loading
 #    - test_check_dashboard
 #    - test_check_leaderboard
-#    - test_check_user_management
+    - test_check_user_management
 #- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
 #  class: CRMConfigurationsTest
 #  tests:
