--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,10 +5,10 @@ tests_config:
 #  tests:
 #    - test_autorization_process
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-#  class: CreateNewCustomer
-#  tests:
-#    - test_create_new_customer
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+  class: CreateNewCustomer
+  tests:
+    - test_create_new_customer
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
 #  class: ReadCustomerDetails
@@ -34,7 +34,7 @@ tests_config:
 #  class: LoginToken
 #  tests:
 #    - test_login_token
-#
+##
 
   ###General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
