--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -15,12 +15,12 @@ brands:
 #  config_file: fxpmarkets.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: kaya_fx
-  config_file: kaya_fx.yml
+#- name: kaya_fx
+#  config_file: kaya_fx.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: stoxmarket
