--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -20,7 +20,8 @@ tests_config:
   tests:
 #    - test_trade_with_insufficient_funds
 #    - test_open_order_buy_sell
-    - test_open_order_stop_loss_take_profit
+#    - test_open_order_stop_loss_take_profit
+    - test_edit_order_stop_loss_take_profit
 
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
