--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -8,7 +8,7 @@ FirstLeadInfo:
   last_name: "Auto"
   mobile: "8888888"
   fax: "5555"
-  EVAL_email: "'pandaauto+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
+  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
   secondary_email: "secondarytestqa+1@pandats.com"
   first_language: "English"
   panda_partner_id:
@@ -44,7 +44,7 @@ SecondLeadInfo:
   last_name: "White"
   mobile: "7777777"
   fax: "6666"
-  EVAL_email: "'pandaauto+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
+  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
   secondary_email: "secondarytestqa+2@pandats.com"
   first_language: "English"
   panda_partner_id: "66"
@@ -82,7 +82,7 @@ client_1:
 #  first_name: "John-test" # manual config
   EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "Doe"
-  EVAL_email: "'pandaauto+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
+  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
 #  email: "john_doe_20180823_131412@pandats.com" # manual config
   short_client_name: "John-test Doe"
   phone: "7777777"
