--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -179,7 +179,7 @@ tests_config:
 #    - test_chat_vtiger
 #    - test_chat_laravel
 ##################################User_Management#########################################
-- module: src.test.python.ui.automation.implementation.crm.user_management.Test_Create_User
-  class: UserTest
+- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
+  class: UserManagementTest
   tests:
     - test_create_user
