--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -41,12 +41,12 @@ brands:
 #  config_file: aztrades.yml
 #- name: brokerz
 #  config_file: brokerz.yml
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #- name: kontofx
 #  config_file: kontofx.yml
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 
 
