new tests: chat, user management

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -25,7 +25,7 @@ FirstLeadInfo:
   first_lead_status_new: "New"
   first_lead_status_uft: "New"
   first_lead_status_b_test: "B - Test"
-  first_assigned_to: "pandaqa pandaqa"
+  first_assigned_to: "Panda Auto"
   first_source_name: "source name test"
   brand:
   po_box: "po box text"
