--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -57,7 +57,7 @@ SecondLeadInfo:
   first_lead_status_new: "Not interested"
   first_lead_status_uft: "No interest"
   first_lead_status_b_test: "B - Test"
-  first_assigned_to: "pandaqa pandaqa"
+  first_assigned_to: "Panda Auto"
   first_source_name: "source name test"
   brand:
   po_box: "po box text"
