--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -8,7 +8,7 @@ tests_config:
 #    - test_sms_icon
 #    - test_sorting_columns
 #    - test_searching_by_columns
-#  ##General
+#####General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
 #  tests:
@@ -18,16 +18,14 @@ tests_config:
 #    - test_create_filter_help_desk
 #    - test_create_filter_trading_account_module
 ####Leads
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
-  tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+#  class: TabLeadsModuleCRM
+#  tests:
+#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
 #    - test_mass_assign_leads
 #    - test_mass_edit_leads
-###    - export_full_list #only for one process
-###    - export_select_records #only for one process
-###    - import_leads #only for one process
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
@@ -42,33 +40,24 @@ tests_config:
 #    - test_edit_lead_pencil_icon
 #    - test_check_email_popup
 
-###CONVERT LEAD
+####################################CONVERT LEAD##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
 #  tests:
 #    - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-##CLIENTS
+#####################################CLIENTS###############################################
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
 #  class: SearchingClientsTestCRM
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client.
 
-############### NOT RUN (there is no permissions to delete task)####################################################
-
-##- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-##  class: AddInteraction
-##  tests:
-##    - test_add_interaction  # Adds an interaction for a client
-##    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
+######################################TASKS##################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
 #  tests:
-##    - test_add_event
-##    - test_edit_event
-##    - test_delete_interaction
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
@@ -121,14 +110,13 @@ tests_config:
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_edit_trading_account  # edit trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-#  class: AffiliateModule
-#  tests:
-#     - test_create_affiliate
+- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
+  class: AffiliateModule
+  tests:
+     - test_create_affiliate
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
 #  class: CalendarView
 #  tests:
-#     - test_check_add_tasks_calendar_view #preconditions convert lead
 #     - test_check_day_tab
 #     - test_check_month_tab
 #     - test_check_week_tab
@@ -150,14 +138,6 @@ tests_config:
 #  tests:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-#  class: CreateNewCustomer
-#  tests:
-#    - test_create_new_lead
-#    - test_create_new_customer
-#- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
-#  class: AutoAssignModuleTest
-#  tests:
 #    - test_perform_delete_rule
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
@@ -178,12 +158,7 @@ tests_config:
 #    - test_check_workflow_by_status
 #    - test_check_workflow_by_country
 #    - test_delete_workflow
-###################################Chat########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_chat.Test_Chat
-#  class: TestChat
-#  tests:
-#    - test_chat_vtiger
-#    - test_chat_laravel
+
 ##################################User_Management#########################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
 #  class: UserManagementTest
