--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
 #- name: gmo
 #  config_file: gmo.yml
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #- name: soarfx
@@ -19,8 +19,8 @@ brands:
 #  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: kaya_fx
-  config_file: kaya_fx.yml
+#- name: kaya_fx
+#  config_file: kaya_fx.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: stoxmarket
