--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,6 @@
 tests_config:
-#
+
+#######################################MY DASHBOARD TESTS########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
 #  class: MyDashboardActionsTest
 #  tests:
@@ -9,6 +10,7 @@ tests_config:
 #    - test_sorting_columns
 #    - test_searching_by_columns
 #
+#######################################MODULES ARE OPENS#########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModules
 #  tests:
@@ -17,11 +19,14 @@ tests_config:
 #    - test_check_user_management
 #    - test_my_dashboard_loading
 #    - test_audit_logs_loading
+
+######################################CRM CONFIGURATIONS#########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
 #  class: CRMConfigurationsTest
 #  tests:
 #    - test_crm_configurations_pages_loading
-  #General
+
+#########################################FILTERS TESTS###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
 #  tests:
@@ -30,7 +35,8 @@ tests_config:
 #    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
 #    - test_create_filter_trading_account_module
-##
+
+#############################################LEADS MODULE###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
 #  class: TabLeadsModuleCRM
 #  tests:
@@ -38,9 +44,6 @@ tests_config:
 #    - sorting_lead_module
 #    - test_mass_assign_leads
 #    - test_mass_edit_leads
-#    - export_full_list #only for one process
-#    - export_select_records #only for one process
-#    - import_leads #only for one process
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
@@ -48,34 +51,44 @@ tests_config:
 #  tests:
 #    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
 #    - test_edit_lead
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_edit_lead_pencil_icon
+#    - test_check_email_popup
+
+################################################CONVERT LEAD############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
 #  tests:
 #    - test_perform_convert_lead   # Creates a lead and converts it to a client
-####Clients
+
+##################################################CLIENTS################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
 #  class: SearchingClientsTestCRM
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client.
 
-    #PERMISSION FOR DELETE TASKS
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-#  class: AddInteraction
-#  tests:
-#    - test_add_interaction  # Adds an interaction for a client
-#    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
+####################################################TASKS##################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
 #  tests:
-#    - test_add_event
-#    - test_edit_event
-#    - test_delete_interaction
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
 #    - test_searching_by_columns
-#
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+#  class: CalendarView
+#  tests:
+#    - test_check_day_tab
+#    - test_check_month_tab
+#    - test_check_week_tab
+
+##################################################CLIENT'S DETAILS##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
 #  tests:
@@ -87,29 +100,33 @@ tests_config:
 #  tests:
 #    - test_change_client_password_from_crm  # change a client account password from the crm
 #    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
 #  class: DepositTestCRM
 #  tests:
 #    - test_make_deposit_crm  # make a deposit into a trading account from the crm
 #    - test_make_deposit_for_client_crm
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
 #  class: WithdrawTest
 #  tests:
 #    - test_withdraw_crm   #preconditions: convert lead, make deposit
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
 #  class: CreditInTestCRM
 #  tests:
 #    - test_make_credit_in_from_crm
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_Out
 #  class: CreditOutTestCRM
 #  tests:
 #    - test_make_credit_out_crm # preconditions: convert lead, make credit in
-#
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
 #  class: SendEmailTestCRM
 #  tests:
 #    - test_send_email # preconditions: convert lead
-##
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Transfer_Between_Ta
 #  class: TransferBetweenTa
 #  tests:
@@ -119,46 +136,38 @@ tests_config:
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_edit_trading_account  # edit trading account
-#
+
+##############################################AFFILIATES MODULE##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
 #  class: AffiliateModule
 #  tests:
 #    - test_create_affiliate
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-#  class: CalendarView
-#  tests:
-#    - test_check_add_tasks_calendar_view #preconditions convert lead
-#    - test_check_day_tab
-#    - test_check_month_tab
-#    - test_check_week_tab
+
+#########################################FINANCIAL TRANSACTIONS##############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
 #  class: TabFinancialTransaction
 #  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button # Check search using search button
-#
+
+############################################CAMPAIGN MODULE###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
 #  class: CampaignsModuleTest
 #  tests:
 #    - test_create_campaign
 #    - test_edit_campaign
 #    - test_delete_campaign
+
+##########################################AUTOASSIGN MODULE#############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
 #  class: AutoAssignModuleTest
 #  tests:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-#  class: CreateNewCustomer
-#  tests:
-#    - test_autoassign_create_new_lead
-#    - test_autoassign_create_new_customer
-#- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
-#  class: AutoAssignModuleTest
-#  tests:
 #    - test_perform_delete_rule
-#
+
+############################################WORKFLOWS MODULE##############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
 #  class: WorkflowsModulesTest
 #  tests:
@@ -166,20 +175,15 @@ tests_config:
 #    - test_check_workflow_by_status
 #    - test_check_workflow_by_country
 #    - test_delete_workflow
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-#    - test_edit_lead_pencil_icon
-    - test_check_email_popup
-###################################Chat########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Chat
-#  class: TestChat
-#  tests:
-#    - test_chat_vtiger
-#    - test_chat_laravel
-##################################User_Management#########################################
+
+###############################################USER MANAGEMENT############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
 #  class: UserManagementTest
 #  tests:
 #    - test_create_user
+
+##########################################DOCUMENTS MODULE###############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+  class: DocumentModuleTest
+  tests:
+    - test_searching_by_columns
