--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -1,22 +1,25 @@
 tests_config:
+###CA
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+    - test_check_email_sign_up
+    - test_registred_client_exist_in_crm
 
-  #General
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
+  class: AddNewLiveAccountTestCA
   tests:
-  - test_create_filter_clients_module
-  - test_create_filter_documents_module
-  - test_create_filter_leads_module
-  - test_create_filter_help_desk
-  - test_create_filter_trading_account_module
-##  #Leads
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
+    - test_add_new_live_account_ca
+    - test_add_new_demo_account_ca
+    - test_check_demo_in_crm
+    - test_open_ticket_ca
+##    - test_upload_document
+- module: src.test.python.ui.automation.implementation.ca.Trading_Process
+  class: TradingProcess
   tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
+    - test_trade_with_insufficient_funds
+    - test_open_order_buy_sell
+    - test_open_order_stop_loss_take_profit
+    - test_edit_order_stop_loss_take_profit
+    - test_close_order
