--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
-#- name: gmo
-#  config_file: gmo.yml
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+- name: gmo
+  config_file: gmo.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #- name: soarfx
