--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -73,7 +73,12 @@ brands:
   config_file: tfxgo.yml
 - name: uprofx
   config_file: uprofx.yml
-
+- name: mpcrypto
+  config_file: mpcrypto.yml
+- name: b-traderfx
+  config_file: b-traderfx.yml
+- name: newforexqa2
+  config_file: newforexqa2.yml
 
 
 
