--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -63,7 +63,7 @@ SecondLeadInfo:
   first_lead_status_new: "Not interested"
   first_lead_status_new_lead: "New Lead"
   first_lead_status_c_new: "B - No interest"
-  first_assigned_to: "pandaqa pandaqa"
+  first_assigned_to: "Panda Auto"
   first_source_name: "source name test"
   brand:
   po_box: "po box text"
