Test_Document_Module: test_sorting added new methods: - get_row_doc_no - check_number_is_greater

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -200,7 +200,7 @@ tests_config:
   class: DocumentModuleTest
   tests:
 #    - test_searching_by_columns
-    - test_open_tabs
+#    - test_open_tabs
     - test_sorting
 
 
