added configuration for newforexstage2

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,10 @@
 brands:
 
-- name: ptbanc
-  config_file: ptbanc.yml
+- name: newforexstage2
+  config_file: newforexstage2.yml
+
+#- name: ptbanc
+#  config_file: ptbanc.yml
 #
 #- name: q8
 #  config_file: q8.yml
@@ -17,4 +20,4 @@ brands:
 #
 #- name: tradospot
 #  config_file: tradospot.yml
-
+#
