--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -21,13 +21,13 @@ tests_config:
 #    - test_create_filter_trading_account_module
 #
 #############################################LEADS###################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-#    - sorting_lead_module
-#    - test_mass_assign_leads
-#    - test_mass_edit_leads
+    - sorting_lead_module
+    - test_mass_assign_leads
+    - test_mass_edit_leads
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
@@ -68,14 +68,14 @@ tests_config:
 #    - test_clients_mass_assign
 #
 ######################################TASKS##################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-  class: AddEventTaskModule
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+#  class: AddEventTaskModule
+#  tests:
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
 #    - test_searching_by_columns
-    - test_sorting_columns
+#    - test_sorting_columns
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
@@ -200,8 +200,8 @@ tests_config:
 #  tests:
 #    - test_create_user
 #    - test_delete_user
-#
-##########################################DOCUMENTS MODULE###############################################
+##
+###########################################DOCUMENTS MODULE###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
 #  class: DocumentModuleTest
 #  tests:
