--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -57,10 +57,10 @@ tests_config:
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client
 #
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-  class: MassEditTestCRM
-  tests:
-    - test_clients_mass_edit
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+#  class: MassEditTestCRM
+#  tests:
+#    - test_clients_mass_edit
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
 #  class: MassAssignTestCRM
@@ -164,12 +164,12 @@ tests_config:
 #    - test_delete_campaign
 #
 ##########################################AUTOASSIGN MODULE#############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
-#  class: AutoAssignModuleTest
-#  tests:
-#    - test_add_auto_assign_rule_lead
-#    - test_add_auto_assign_rule_client
-#    - test_perform_delete_rule
+- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
+  class: AutoAssignModuleTest
+  tests:
+    - test_add_auto_assign_rule_lead
+    - test_add_auto_assign_rule_client
+    - test_perform_delete_rule
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
