--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
-  class: AutorizationProcess
-  tests:
-    - test_autorization_process
-
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-#  class: CreateNewCustomer
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
+#  class: AutorizationProcess
 #  tests:
-#    - test_create_new_customer
+#    - test_autorization_process
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+  class: CreateNewCustomer
+  tests:
+    - test_create_new_customer
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
 #  class: ReadCustomerDetails
