--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,5 +1,4 @@
 brands:
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
+
+- name: gmo
+  config_file: gmo.yml
