--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,10 +1,4 @@
 brands:
-- name: kaya_fx
-  config_file: kaya_fx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
-#- name: soarfx
-#  config_file: soarfx.yml
-#- name: finmarket
-#  config_file: finmarket.yml
 
+- name: itrader
+  config_file: itrader.yml
