--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -1,22 +1,44 @@
 tests_config:
 
-  #General
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
+###CA
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
   tests:
-  - test_create_filter_clients_module
-  - test_create_filter_documents_module
-  - test_create_filter_leads_module
-  - test_create_filter_help_desk
-  - test_create_filter_trading_account_module
-##  #Leads
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
+    - test_check_sign_up
+    - test_check_email_sign_up
+    - test_registred_client_exist_in_crm
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
   tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
+    - test_add_live_account_ca
+    - test_add_demo_account_ca
+    - test_verify_accounts_in_crm
+    - test_switch_between_accounts_ca
+- module: src.test.python.ui.automation.implementation.ca.Trading_Process
+  class: TradingProcess
   tests:
-    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
+    - test_trade_with_insufficient_funds
+    - test_open_order_buy_sell
+    - test_open_order_stop_loss_take_profit
+    - test_edit_order_stop_loss_take_profit
+    - test_close_order
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+    - test_update_personal_details_in_ca
+    - test_personal_details_were_updated_in_crm
+    - test_update_personal_details_in_crm
+    - test_personal_details_were_updated_in_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+  class: CreateSupportTicketTestCa
+  tests:
+    - test_create_ticket
+    - test_check_and_update_ticket_in_crm
+    - test_check_updated_ticket_in_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Upload_Documents
+  class: UploadDocumentTestCa
+  tests:
+    - test_upload_document_ca
+    - test_check_and_update_document_in_crm
+    - test_check_document_status_in_ca
+
