--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -65,12 +65,12 @@ tests_config:
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
-#
+
 ##################################################CLIENTS################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-#  class: SearchingClientsTestCRM
-#  tests:
-#    - test_make_searching_client_module   # Searches for a client.
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+  class: SearchingClientsTestCRM
+  tests:
+    - test_make_searching_client_module   # Searches for a client.
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
 #  class: MassEditTestCRM
