--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -58,19 +58,19 @@ tests_config:
 #  tests:
 #    - test_edit_lead_pencil_icon
 #    - test_check_email_popup
-
+#
 ################################################CONVERT LEAD############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
-
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#
 ##################################################CLIENTS################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-  class: SearchingClientsTestCRM
-  tests:
-    - test_make_searching_client_module   # Searches for a client.
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+#  class: SearchingClientsTestCRM
+#  tests:
+#    - test_make_searching_client_module   # Searches for a client.
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
 #  class: MassEditTestCRM
@@ -181,13 +181,13 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ###########################################WORKFLOWS MODULE##############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-#  class: WorkflowsModulesTest
-#  tests:
-#    - test_create_workflows
+- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+  class: WorkflowsModulesTest
+  tests:
+    - test_create_workflows
 #    - test_check_workflow_by_status
 #    - test_check_workflow_by_country
-#    - test_delete_workflow
+    - test_delete_workflow
 #
 ##############################################USER MANAGEMENT############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
